<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:checked="true"
            android:icon="@drawable/ic_event_note_white_24dp"
            android:title="@string/notes_side_menu_text" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_delete_white_24dp"
            android:title="@string/trash_side_menu_text" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_colorize_white_24dp"
            android:title="@string/theme_side_menu_text" />
        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings_side_menu_text" />
        <item
            android:id="@+id/nav_fifth_fragment"
            android:icon="@drawable/ic_help_outline_white_24dp"
            android:title="@string/help_side_menu_text" />
    </group>

</menu>